@@ -1,5 +1,7 @@
 [Changes 1.2.2]
 
+* Don't double-up server notices in the /RELS list. (caf)
+
 * Don't fire the SERVER_NOTICE hook more than once per notice. (caf)
 
 * Fix display of the OperView SWATCH flags variable. (caf)
